feat: support custom tags

--- a/test/example.mdx
+++ b/test/example.mdx
@@ -1,3 +1,6 @@
+
+const H2 = ({ children }) => <h2>{children}</h2>
+
 # Hello, world
 
 ## Title 1
@@ -11,3 +14,7 @@ Sub Content 1
 ## Title 2
 
 Content 2
+
+<h1>Hello World 2</h1>
+
+<H2>Heading 2</H2>
