--- a/test/example.mdx
+++ b/test/example.mdx
@@ -15,6 +15,8 @@ Sub Content 1
 
 Content 2
 
-<h1 id="h1" a={1+1} {...props}>Hello World 2</h1>
+# Heading with attr {#attr}
 
-<H2>Heading 2</H2>
+<h1 id="h1">Heading with html</h1>
+
+<H1>Heading with component</H1>
